src/tests/errors/staticanalysis/naming/main_wrong_parameters_fail.cmp
program main_wrong_parameters_fail
begin
 proc main( errorhere : int ) /* Fail: parameter to main. */
 begin
 end
end